<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/usage_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UsageActivity"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/stats"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/stats"
        android:textAllCaps="true"
		android:textAppearance="@+style/largeText" />
    
    <TextView
        android:id="@+id/success_this"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/this_success"
         />
    
    <TextView
        android:id="@+id/success_this_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        
         />
    
    <TextView
        android:id="@+id/recent_steps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/recent_steps"
         />
    
    <TextView
        android:id="@+id/recent_steps_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/this_success"
         />
    
    <TextView
        android:id="@+id/short_path"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/shortest_path"
         />
    
    <TextView
        android:id="@+id/short_path_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/shortest_path"
         />
    
    <TextView
        android:id="@+id/this_energy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/this_energy"
         />
    
     <TextView
        android:id="@+id/this_energy_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/this_energy"
         />
     
    <TextView
        android:id="@+id/best_energy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/best_energy"
         />
    
    <TextView
        android:id="@+id/best_energy_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/best_energy"
         />
</LinearLayout>
